--- a/QuizApplication/Views/Quizzes/Create.cshtml
+++ b/QuizApplication/Views/Quizzes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model QuizApplication.Models.Quiz
+﻿@model QuizApplication.Models.ViewModels.CreateQuizViewModel
 
 @{
     ViewData["Title"] = "Create";
