--- a/QuizApplication/Views/Questions/Delete.cshtml
+++ b/QuizApplication/Views/Questions/Delete.cshtml
@@ -1,45 +1,24 @@
-﻿@model QuizApplication.Models.Question
-
+﻿@model QuizApplication.Models.ViewModels.EditQuestionViewModel
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Usuń pytanie";
 }
 
-<h1>Delete</h1>
+<h2>Usuń pytanie</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Question</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Content)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Content)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TimeLimitSeconds)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TimeLimitSeconds)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Quiz)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Quiz.Title)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+    <p>Czy na pewno chcesz usunąć to pytanie z quizu <strong>@ViewBag.QuizTitle</strong>?</p>
+    <div><strong>@Model.Content</strong></div>
+    <ul>
+        @foreach (var a in Model.Answers)
+        {
+            <li>@a.Content @(a.IsCorrect ? "(poprawna)" : "")</li>
+        }
+    </ul>
+
+    <form asp-action="Delete" method="post">
+        @Html.AntiForgeryToken()
+        <input type="hidden" name="questionId" value="@Model.QuestionId" />
+        <button type="submit" class="btn btn-danger">Usuń</button>
+        <a asp-controller="Quizzes" asp-action="Details" asp-route-id="@Model.QuizId" class="btn btn-secondary">Anuluj</a>
     </form>
 </div>
