--- a/QuizApplication/Views/Questions/Create.cshtml
+++ b/QuizApplication/Views/Questions/Create.cshtml
@@ -6,9 +6,14 @@
 
 <h2>Dodaj pytanie do quizu: @ViewBag.QuizTitle</h2>
 
-<form asp-action="Create" method="post">
+<form asp-action="Create" method="post" enctype="multipart/form-data">
     @Html.AntiForgeryToken()
     <input type="hidden" asp-for="QuizId" />
+
+    <div class="form-group">
+        <label>Obrazek (opcjonalnie)</label>
+        <input type="file" name="file" class="form-control" accept="image/*" />
+    </div>
 
     <div class="form-group">
         <label asp-for="Content"></label>
