Stworzenie interfejsu IGameSessionService, Modyfikacja GameSessionService po dodaniu interfejsu, dodanie w QuizHub obsługi błędów, walidacji nicków i rozróżnianie hosta, dodanie do GameController logiki startowania gry przez hosta i dołączania przez gracza, rejestracja serwisu w program.cs . Stworzenie widoku Hosta który wyświetla kod i czeka na graczy. Aktualizacja widoku Gracza aby korzystał z nowej metudy "JoinGamePlayer".

--- a/QuizApplication/Views/Game/Join.cshtml
+++ b/QuizApplication/Views/Game/Join.cshtml
@@ -23,13 +23,13 @@
     </div>
 </div>
 
-</<script>
-    document.getElementById("joinForm").addEventListener("submit", function(e){
+<script>
+    document.getElementById("joinForm").addEventListener("submit", function(e) {
         e.preventDefault();
-        var code = document.getElementById("accesCode").value;
-        var nick = document.getElementById("nickName").value;
-          // Przekierowanie do Lobby z parametrami
-        window.location.href = '/Game/Lobby?code=${code}$nick=${nick}';
+        var code = document.getElementById("accessCode").value;
+        var nick = document.getElementById("nickname").value;
+        // Przekierowanie do Lobby z parametrami
+        window.location.href = `/Game/Lobby?code=${code}&nick=${nick}`;
     });
 </script>
 
