--- a/QuizApplication/Views/Game/Join.cshtml
+++ b/QuizApplication/Views/Game/Join.cshtml
@@ -23,6 +23,13 @@
     </div>
 </div>
 
+@if(ViewBag.Error !=null)
+{
+    <div class="alert alert-danger">
+        @ViewBag.Error
+    </div>
+}
+
 <script>
     document.getElementById("joinForm").addEventListener("submit", function(e) {
         e.preventDefault();
