--- a/QuizApplication/Views/Quizzes/Edit.cshtml
+++ b/QuizApplication/Views/Quizzes/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@model QuizApplication.Models.Quiz
+﻿@model QuizApplication.Models.ViewModels.EditQuizViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edytuj Quiz";
 }
 
-<h1>Edit</h1>
+<h1>Edytuj</h1>
 
 <h4>Quiz</h4>
 <hr />
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" />
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
@@ -20,14 +20,13 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index">Anuluj</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
